tests/paczka2/big_fuzzy/96786099.err
Error in line 1: A843 A843 17,5
Error in line 5: A843 A400 53,2
Error in line 11: rqX9QmAYfqW A190 37,4
Error in line 7: A843 A190 25,0
Error in line 22: qd1 A843 79,4
Error in line 37: A843 A400 12,9
Error in line 61: YDcVcVmy A400 56,6
Error in line 70: YDcVcVmy A843 55,5
Error in line 71: A843 A400 319,2
Error in line 81: rqX9QmAYfqW A843 44,3
Error in line 85: rqX9QmAYfqW A190 81,7
Error in line 93: YDcVcVmy A400 21,3
Error in line 112: YDcVcVmy S617 15,0
Error in line 104: A843 S617 107,1
Error in line 105: HMFx A400 58,1
Error in line 124: YDcVcVmy S617 13,1
Error in line 137: 9rm2 A843 41,23
Error in line 130: 9rm2 A843 48,0
Error in line 134: A843 A400 42,0
Error in line 144: HMFx A843 118,4
Error in line 146: 9rm2 A400 3,1
Error in line 161: YDcVcVmy S617 0,4
Error in line 160: qd1 S617 326,8
Error in line 181: A843 A400 85,8
Error in line 179: qd1 A400 96,2
Error in line 190: HMFx S617 3,0
Error in line 187: qd1 A190 18,9
Error in line 197: qd1 S617 89,8
Error in line 184: A843 A843 17,4
Error in line 205: A843 S617 15,1
Error in line 188: rqX9QmAYfqW A843 2,1
Error in line 216: 9rm2 A843 11,8
Error in line 211: A843 A843 371,8
Error in line 218: rqX9QmAYfqW S617 3,0
Error in line 222: 9rm2 S617 4,2
Error in line 241: qd1 A400 45,4
Error in line 235: rqX9QmAYfqW S617 61,4
